implements #388
